fix delete logic
